# Scholarship-Database

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ProjectFile.cpp  README.md  container.cpp  main.cpp  scholarship.db
include/: Applications.h  BankAccounts.h  Database.h  Fields.h  Nationalities.h  Payments.h  Persons.h  ScholarsAccounts.h  Scholarships.h  StatusCategories.h
source/: Applications.cpp  BankAccounts.cpp  Database.cpp  Fields.cpp  Nationalities.cpp  Payments.cpp  Persons.cpp  ScholarsAccounts.cpp  Scholarships.cpp  StatusCategories.cpp
